# tactigrip

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: benchmark_policies.py  evaluate_heuristic.py  evaluate_policy.py  run_mujoco_grasp.py  train_ppo.py  validate_sensors.py  view_mujoco_grasp.py  visualize_rerun.py
src/tactigrip/: __init__.py  policies.py
src/tactigrip/backends/: __init__.py  mujoco_grasp.py
src/tactigrip/envs/: __init__.py  fragile_grasp_env.py  mujoco_grasp_env.py
src/tactigrip/sensors/: __init__.py  tactile.py
src/tactigrip/sim/: __init__.py  gripper.py
tests/: test_core.py  test_mujoco_backend.py
