[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tactigrip"
version = "0.1.0"
description = "Multimodal tactile gripper simulation for slip-aware manipulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

